--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,13 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
   <title>duckheader</title>
 
   <!--<link rel=”icon” href="images/favicon.ico" mce_href=”images/favicon.ico” type=”image/x-icon”>-->
 
-  <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/frozen.css">
 </head>
 <body>
 
@@ -18,7 +20,9 @@
     </div>
 </div>
 
-  <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-  <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!--<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>-->
+  <!--<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
+  <script src="static/js/zepto.min.js"></script>
+  <script src="static/js/frozen.js"></script>
 </body>
 </html>
